--- a/views/home.haml
+++ b/views/home.haml
@@ -1,7 +1,6 @@
 %html
   %head
-    %title DeadBox.in - Find a new home for your old computer
-    %link{:rel => :stylesheet, :type => "text/css", :href => "/home.css"}
+    %title Oops, I mingled again
   %body
     #content
       #main
