Wrote the rails stuff

--- a/views/home.haml
+++ b/views/home.haml
@@ -4,11 +4,6 @@
   %body
     #content
       %center
-        %table{ :border => "1" }
-          - for card in cards
-            %tr
-              %td
-                %a{:href => card.url}= "#" + card.number.to_s
-              %td= card.name
-              %td= card.committer
-              %td= card.status
+        - for branch in branches
+          %br
+            %a{:href => "/branch/#{branch}"}= branch
